objects/ssot__BenefitApplication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAssignmentId__c</fullName>
        <label>Benefit Assignment</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Application Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818622008_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitApplication_ApplicationId_map_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>BenefitApplication_ApplicationId_map_rel</relationshipLabel>
        <relationshipName>rel_1719818622008_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819475536_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitApplication_BenefitAssignment_rel</label>
        <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
        <relationshipLabel>BenefitApplication_BenefitAssignment_rel</relationshipLabel>
        <relationshipName>rel_1719819475536_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819620999_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitApplication_BenefitId_map_Pro_rel</label>
        <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
        <relationshipLabel>BenefitApplication_BenefitId_map_Pro_rel</relationshipLabel>
        <relationshipName>rel_1719819620999_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>